<resources>
    <string name="app_name">Modul2.1</string>
    <string name="send">Send</string>
    <string name="second_activity">SecondActivity</string>
    <string name="message_received">Message Received</string>
    <string name="hint_first_activity">Enter Your Message Here</string>
    <string name="reply">Reply</string>
    <string name="enter_reply">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="first_activity">First Activity</string>
</resources>
